{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "GamePlay",
            "id": "37c004ff-a551-4d07-b0e2-d24e5eee5d55",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a20aaf2b-45ae-4205-a35a-4f2f79c2307c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "8bb03f04-a2e8-4e87-8dda-7d4288a95dca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "1622cfca-5cac-4386-9659-dedd9e35a345",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSkill",
                    "type": "Button",
                    "id": "15ac359c-cdaf-4b25-be2b-c7c214c249a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a376521-d1aa-475e-b793-41a98a2fcb3c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0efebc71-bfa0-41e3-a05c-5059eb2f85bd",
                    "path": "<HID::8BitDo 8BitDo Ultimate wireless Controller for PC>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c2567cd-d2d2-4794-ad5a-d49ded84830b",
                    "path": "<HID::8BitDo 8BitDo Ultimate wireless Controller for PC>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3edeac0b-5d9a-4df3-a39f-29d1af5475fb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8725919a-6a99-4f9d-a7cc-689e62220855",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf5e94e1-8433-4993-909d-b4f1b55e79c4",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbbaa51a-f621-449c-8ce2-be575d8f86c4",
                    "path": "<HID::8BitDo 8BitDo Ultimate wireless Controller for PC>/button9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f84c77b5-0b9d-4c03-919e-a7a8ee92eed8",
                    "path": "<HID::8BitDo 8BitDo Ultimate wireless Controller for PC>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9caf848-9d1d-4d4d-9882-8083cfc95ff4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}